--- a/images/legal.html
+++ b/images/legal.html
@@ -89,7 +89,7 @@
                   
             </nav>
             <div class="items-center justify-center">
-            <div class=" bg-no-repeat min-h-screen mt-10 items-center  justify-center" style="background-image: url(banner.png);">
+            <div class=" bg-no-repeat  mt-10 items-center  justify-center" style="background-image: url(banner.png);">
                 <div class=" bg-opacity-60"></div>
                 <div class=" hero-content text-center text-neutral-content">
                   <div class="max-w-md">
